add validation and replaced if() with Optional